# SFML-Collection

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml  deploy.yml
Projects/: CMakeLists.txt  GetSceneByName.h
Projects/CircleViewer/: CircleViewer.cpp  CircleViewer.h  description.txt
Projects/Fractals/: description.txt
Projects/Fractals/mandlebrotSet/: description.txt  mandlebrotSet.cpp  mandlebrotSet.h
Projects/Interpolations/: CustomIpExample.cpp  CustomIpExample.h  DraggableCircle.cpp  DraggableCircle.h  IpExample.cpp  IpExample.h  IpField.cpp  IpField.h  IpGraph.cpp  IpGraph.h  IpSlider.cpp  IpSlider.h  description.txt
Projects/SnakeGame/: SnakeScene.cpp  SnakeScene.h  description.txt
Projects/SquareViewer/: SquareViewer.cpp  SquareViewer.h  description.txt
Projects/abs_difference/: abs_difference.h  description.txt
Projects/blob/: blob.cpp  blob.h  description.txt
Projects/boids/: boids.cpp  boids.h  description.txt  raymath.h
Projects/domain_warping/: description.txt  domain_warping.cpp  domain_warping.h
Projects/mandlebrotSet/: mandlebrotSet.cpp  mandlebrotSet.h
Scene/: CMakeLists.txt  Scene.cpp  Scene.h
Scene/Animation/: AnimTask.h  Animation.h  InterpolFunctions.cpp  InterpolFunctions.h  Interpolator.cpp  Interpolator.h  IpFuncs.cpp  IpFuncs.h
Scene/SceneTools/: DirScene.cpp  DirScene.h  MenuScene.cpp  MenuScene.h  ProjectCover.cpp  ProjectCover.h  SceneCollection.cpp  SceneCollection.h  Timer.cpp  Timer.h
Scene/SceneTools/MenuScene/: DescriptionScene.cpp  DescriptionScene.h  DirScene.cpp  DirScene.h  MenuScene.cpp  MenuScene.h  ProjectCover.cpp  ProjectCover.h
